correct grid item overflow with body padding bottom

--- a/style.css
+++ b/style.css
@@ -5,15 +5,12 @@
 
 body {
     background-color: rgb(241, 238, 238);
-
-
 }
 
 .container {
 
     margin: 5% auto 8% auto;
     width: 80%;
-    height: 90%;
     gap: 7%;
 
 }
@@ -60,6 +57,10 @@ img {
 
 @media all and (min-width: 1px) and (max-width:480px) {
 
+    body{
+            padding-bottom: 50%
+
+    }
     .container {
         display: grid;
         grid-template-columns: 100%;
@@ -90,10 +91,13 @@ img {
 
 @media all and (min-width: 481px) and (max-width:768px) {
 
+    body{
+            padding-bottom: 50%
+
+    }
     .container {
         display: grid;
         grid-template: repeat(4, auto)/ repeat(2, 1fr);
-
 
     }
 
@@ -120,7 +124,7 @@ img {
     .container {
         display: grid;
         grid-template: repeat(2, auto)/ repeat(4, 1fr);
-        /*! column-gap: 15px; */
+
     }
 
     h3 {
